# hypranimated

./: .gitignore  CMakeLists.txt  Makefile  README.md  hypranimated.exports.map  hyprpm.toml
src/: animations.cpp  config.cpp  hooks.cpp  hypranimated.hpp  main.cpp  render.cpp  shader.cpp  state.cpp  transformer.cpp
